feat: working migrations and fixtures to pre-populate database with warhammer data
